--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "semantic-ui-css": "^2.3.3",
+    "semantic-ui-react": "^0.82.4",
     "uuid": "^3.3.2"
   },
   "scripts": {
